@startuml

interface CompressionFormat {
    void compress(List<File> files)
}

class Compressor {
	void setCompressionFormat(CompressionFormat compressionFormat)
	void compress(List<File> files)
}

RarCompression -u-|> CompressionFormat
ZipCompression -u-|> CompressionFormat

Compressor *-d- CompressionFormat

note "Estrategia" as NoteEstrategia
CompressionFormat ..l.. NoteEstrategia

note "Contexto" as NoteContexto
Compressor ..l.. NoteContexto

@enduml